# django-vue

./: .dockerignore  .gitignore  Dockerfile  README.md  cursos_realizados.txt  docker-compose.yml  env-example  manage.py  nginx.conf  pyproject.toml
.github/workflows/: github_ci.yml
config/: env-example
djavue/: asgi.py  settings.py  urls.py  wsgi.py
djavue/cursos/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
djavue/cursos/management/commands/: import_cursos.py
djavue/cursos/migrations/: 0001_initial.py  0002_remove_curso_slug.py
djavue/cursos/testes/: test_serializers.py  test_views.py
docker/nginx/: default_local
frontend/vuetify/: Dockerfile  index.html  package-lock.json  package.json  vite.config.mjs
frontend/vuetify/src/components/: AppFooter.vue  Cursos.vue  Main.vue  Menu.vue
frontend/vuetify/src/pages/: index.vue
frontend/vuetify/src/plugins/: vuetify.js
frontend/vuetify/src/stores/: cursos.js
